--- a/app/views/createTicket.html
+++ b/app/views/createTicket.html
@@ -8,15 +8,13 @@
             <ul class="nav metismenu" id="side-menu">
                 <li class="nav-header">
                     <div class="dropdown profile-element"> <span>
-                            <img alt="image" class="img-circle" src="../img/profile_small.jpg" />
+                            <img alt="image" class="img-circle" src="../img/profile_small.jpg"/>
                              </span>
                         <a data-toggle="dropdown" class="dropdown-toggle" href="#">
-                            <span class="clear"> <span class="block m-t-xs"> <strong class="font-bold"><script type="text/javascript">
-                              $.get('/getUsername', function(data){
-                                return data;
-                              })
-                            </script></strong>
-                             </span> <span class="text-muted text-xs block">PROFISSAO <b class="caret"></b></span> </span> </a>
+                            <span class="clear"> <span class="block m-t-xs"> <strong class="font-bold">Username
+                                </script></strong>
+                             </span> <span class="text-muted text-xs block">PROFISSAO <b
+                                    class="caret"></b></span> </span> </a>
                         <ul class="dropdown-menu animated fadeInRight m-t-xs">
                             <li><a href="profile.html">Profile</a></li>
                             <li><a href="contacts.html">Contacts</a></li>
@@ -29,17 +27,19 @@
                         IN+
                     </div>
                 </li>
-                <li class="active">
+                <li id="request_menu">
                     <a href="grid_options.html"><i class="fa fa-slideshare"></i> <span class="nav-label">Create help request</span></a>
                 </li>
 
-                <li>
-                    <a href="grid_options.html"><i class="fa fa-handshake-o"></i> <span class="nav-label">Create Offer</span></a>
+                <li id="offer_menu">
+                    <a href="grid_options.html"><i class="fa fa-handshake-o"></i> <span
+                            class="nav-label">Create Offer</span></a>
                 </li>
 
 
                 <li>
-                    <a href="grid_options.html"><i class="fa fa-plus-square"></i> <span class="nav-label">See Offers</span></a>
+                    <a href="grid_options.html"><i class="fa fa-plus-square"></i> <span
+                            class="nav-label">See Offers</span></a>
                 </li>
 
                 <li>
@@ -55,10 +55,12 @@
         <div class="row border-bottom">
             <nav class="navbar navbar-static-top white-bg" role="navigation" style="margin-bottom: 0">
                 <div class="navbar-header">
-                    <a class="navbar-minimalize minimalize-styl-2 btn btn-primary " href="#"><i class="fa fa-bars"></i> </a>
+                    <a class="navbar-minimalize minimalize-styl-2 btn btn-primary " href="#"><i class="fa fa-bars"></i>
+                    </a>
                     <form role="search" class="navbar-form-custom" action="search_results.html">
                         <div class="form-group">
-                            <input type="text" placeholder="Search for something..." class="form-control" name="top-search" id="top-search">
+                            <input type="text" placeholder="Search for something..." class="form-control"
+                                   name="top-search" id="top-search">
                         </div>
                     </form>
                 </div>
@@ -68,7 +70,7 @@
                     </li>
                     <li class="dropdown">
                         <a class="dropdown-toggle count-info" data-toggle="dropdown" href="#">
-                            <i class="fa fa-envelope"></i>  <span class="label label-warning">16</span>
+                            <i class="fa fa-envelope"></i> <span class="label label-warning">16</span>
                         </a>
                         <ul class="dropdown-menu dropdown-messages">
                             <li>
@@ -78,7 +80,8 @@
                                     </a>
                                     <div class="media-body">
                                         <small class="pull-right">46h ago</small>
-                                        <strong>Mike Loreipsum</strong> started following <strong>Monica Smith</strong>. <br>
+                                        <strong>Mike Loreipsum</strong> started following <strong>Monica Smith</strong>.
+                                        <br>
                                         <small class="text-muted">3 days ago at 7:58 pm - 10.06.2014</small>
                                     </div>
                                 </div>
@@ -91,7 +94,8 @@
                                     </a>
                                     <div class="media-body ">
                                         <small class="pull-right text-navy">5h ago</small>
-                                        <strong>Chris Johnatan Overtunk</strong> started following <strong>Monica Smith</strong>. <br>
+                                        <strong>Chris Johnatan Overtunk</strong> started following <strong>Monica
+                                        Smith</strong>. <br>
                                         <small class="text-muted">Yesterday 1:21 pm - 11.06.2014</small>
                                     </div>
                                 </div>
@@ -121,7 +125,7 @@
                     </li>
                     <li class="dropdown">
                         <a class="dropdown-toggle count-info" data-toggle="dropdown" href="#">
-                            <i class="fa fa-bell"></i>  <span class="label label-primary">8</span>
+                            <i class="fa fa-bell"></i> <span class="label label-primary">8</span>
                         </a>
                         <ul class="dropdown-menu dropdown-alerts">
                             <li>
@@ -188,58 +192,95 @@
 
                             <form class="form-horizontal" method="get">
                                 <div class="form-group"><label class="col-sm-1 control-label">Title:</label>
-                                    <div class="col-sm-10"><input type="text" class="form-control" value=""></div>
+                                    <div class="col-sm-10"><input type="text" class="form-control" value=""
+                                                                  id="ticket_title"></div>
                                 </div>
                                 <div class="form-group"><label class="col-sm-1 control-label">Category:</label>
-                                    <div class="col-sm-10"><input type="text" class="form-control" value=""></div>
+                                    <div class="col-sm-10"><input type="text" class="form-control" value=""
+                                                                  id="ticket_category"></div>
                                 </div>
                                 <div class="form-group"><label class="col-sm-1 control-label">Localization:</label>
-                                    <div class="col-sm-10"><input type="text" class="form-control" value=""></div>
+                                    <div class="col-sm-10"><input type="text" class="form-control" value=""
+                                                                  id="ticket_localization"></div>
                                 </div>
                                 <div class="form-group"><label class="col-sm-1 control-label">Description:</label>
-
-                                    <div class="col-sm-10"><textarea class="form-control" rows="10" id="comment"></textarea></div>
+                                    <div class="col-sm-10"><textarea class="form-control" rows="10" id="ticket_description"></textarea></div>
                                 </div>
                             </form>
 
                         </div>
 
                         <div class="mail-body text-right tooltip-demo">
-                            <a href="mailbox.html" class="btn btn-sm btn-primary" data-toggle="tooltip" data-placement="top" title="Send"><i class="fa fa-reply"></i> Create</a>
-                            <a href="mailbox.html" class="btn btn-white btn-sm" data-toggle="tooltip" data-placement="top" title="Discard email"><i class="fa fa-times"></i> Cancel</a>
+                            <a onclick="createTicket();" class="btn btn-sm btn-primary"
+                               data-toggle="tooltip" data-placement="top" title="Send"><i class="fa fa-reply"></i>
+                                Create</a>
                         </div>
                         <div class="clearfix"></div>
-
-
-
                     </div>
                 </div>
             </div>
         </div>
-        <div class="footer">
-            <div class="pull-right">
-                10GB of <strong>250GB</strong> Free.
-            </div>
-            <div>
-                <strong>Copyright</strong> Example Company &copy; 2014-2017
-            </div>
-        </div>
-
     </div>
 </div>
 
 <!-- Mainly scripts -->
+
 <script src="../js/jquery-3.1.1.min.js"></script>
 <script src="../js/bootstrap.min.js"></script>
 <script src="../js/plugins/metisMenu/jquery.metisMenu.js"></script>
-<script src="../js/plugins/slimscroll/jquery.slimscroll.min.js"></script>
-
-<!-- Custom and plugin javascript -->
+<script src="../js/plugins/slimscroll/jquery.slimscroll.min.js" ></script>
+<script src="../js/getUrlParam.js"></script>
 <script src="../js/inspinia.js"></script>
 <script src="../js/plugins/pace/pace.min.js"></script>
 
 <!-- iCheck -->
 <script src="../js/plugins/iCheck/icheck.min.js"></script>
+
+
+<script>
+    $(document).ready(function () {
+        ticket_type = getURLParameter('type');
+        if (ticket_type == 'offer') {
+            $("#offer_menu").attr('class', 'active');
+        } else {
+            $("#request_menu").attr('class', 'active');
+        }
+    })
+</script>
+
+<script>
+    function createTicket() {
+
+        title = $("#ticket_title").val();
+        category = $("#ticket_category").val();
+        localization = $("#ticket_localization").val();
+        desc = $("#ticket_description").val();
+
+
+        if (ticket_type == 'offer') {
+            path = '/addOferta'
+        } else {
+            path = '/addPedido'
+        }
+
+        $.ajax({
+            type: 'post',
+            url: path,
+            data: {
+                "username": 'username_1',
+                "categoria": category,
+                "titulo": title,
+                "descricao": desc,
+                "localizacao": localization
+            },
+            success: function (data) {
+            }
+        });
+    }
+
+</script>
+
+
 </body>
 
 </html>
