--- a/app/views/createTicket.html
+++ b/app/views/createTicket.html
@@ -3,221 +3,62 @@
 
 <div id="wrapper">
 
-    <nav class="navbar-default navbar-static-side" role="navigation">
-        <div class="sidebar-collapse">
-            <ul class="nav metismenu" id="side-menu">
-                <li class="nav-header">
-                    <div class="dropdown profile-element"> <span>
-                            <img alt="image" class="img-circle" src="../img/profile_small.jpg"/>
-                             </span>
-                        <a data-toggle="dropdown" class="dropdown-toggle" href="#">
-                            <span class="clear"> <span class="block m-t-xs"> <strong class="font-bold">Username
-                                </script></strong>
-                             </span> <span class="text-muted text-xs block">PROFISSAO <b
-                                    class="caret"></b></span> </span> </a>
-                        <ul class="dropdown-menu animated fadeInRight m-t-xs">
-                            <li><a href="profile.html">Profile</a></li>
-                            <li><a href="contacts.html">Contacts</a></li>
-                            <li><a href="mailbox.html">Mailbox</a></li>
-                            <li class="divider"></li>
-                            <li><a href="login.html">Logout</a></li>
-                        </ul>
-                    </div>
-                    <div class="logo-element">
-                        IN+
-                    </div>
-                </li>
-                <li id="request_menu">
-                    <a onclick="window.location = '/createTicket?type=' + 'request'"><i class="fa fa-slideshare"></i> <span class="nav-label">Create help request</span></a>
-                </li>
-
-                <li id="offer_menu">
-                    <a onclick="window.location = '/createTicket?type=' + 'offer'"><i class="fa fa-handshake-o"></i> <span
-                            class="nav-label">Create Offer</span></a>
-                </li>
-
-                <li>
-                    <a href="grid_options.html"><i class="fa fa-plus-square"></i> <span
-                            class="nav-label">See Offers</span></a>
-                </li>
-
-                <li>
-                    <a href="grid_options.html"><i class="fa fa-plus-square-o"></i> <span class="nav-label">See Help Requests </span></a>
-                </li>
-
-            </ul>
-
-        </div>
-    </nav>
-
-    <div id="page-wrapper" class="gray-bg">
-        <div class="row border-bottom">
-            <nav class="navbar navbar-static-top white-bg" role="navigation" style="margin-bottom: 0">
-                <div class="navbar-header">
-                    <a class="navbar-minimalize minimalize-styl-2 btn btn-primary " href="#"><i class="fa fa-bars"></i>
-                    </a>
-                    <form role="search" class="navbar-form-custom">
-                        <div class="form-group">
-                            <input type="text" placeholder="Search for something..." class="form-control"
-                                   name="top-search" id="top-search">
-                        </div>
-                    </form>
+    <script src="../js/sidebar.js"></script>
+    <div class="wrapper wrapper-content">
+        <div class="row">
+            <div class="col-lg-12 animated fadeInRight">
+                <div class="mail-box-header">
+                    <h2>
+                        Create
+                    </h2>
                 </div>
-                <ul class="nav navbar-top-links navbar-right">
-                    <li>
-                        <span class="m-r-sm text-muted welcome-message">Welcome to INSPINIA+ Admin Theme.</span>
-                    </li>
-                    <li class="dropdown">
-                        <a class="dropdown-toggle count-info" data-toggle="dropdown" href="#">
-                            <i class="fa fa-envelope"></i> <span class="label label-warning">16</span>
-                        </a>
-                        <ul class="dropdown-menu dropdown-messages">
-                            <li>
-                                <div class="dropdown-messages-box">
-                                    <a href="profile.html" class="pull-left">
-                                        <img alt="image" class="img-circle" src="img/a7.jpg">
-                                    </a>
-                                    <div class="media-body">
-                                        <small class="pull-right">46h ago</small>
-                                        <strong>Mike Loreipsum</strong> started following <strong>Monica Smith</strong>.
-                                        <br>
-                                        <small class="text-muted">3 days ago at 7:58 pm - 10.06.2014</small>
-                                    </div>
-                                </div>
-                            </li>
-                            <li class="divider"></li>
-                            <li>
-                                <div class="dropdown-messages-box">
-                                    <a href="profile.html" class="pull-left">
-                                        <img alt="image" class="img-circle" src="img/a4.jpg">
-                                    </a>
-                                    <div class="media-body ">
-                                        <small class="pull-right text-navy">5h ago</small>
-                                        <strong>Chris Johnatan Overtunk</strong> started following <strong>Monica
-                                        Smith</strong>. <br>
-                                        <small class="text-muted">Yesterday 1:21 pm - 11.06.2014</small>
-                                    </div>
-                                </div>
-                            </li>
-                            <li class="divider"></li>
-                            <li>
-                                <div class="dropdown-messages-box">
-                                    <a href="profile.html" class="pull-left">
-                                        <img alt="image" class="img-circle" src="img/profile.jpg">
-                                    </a>
-                                    <div class="media-body ">
-                                        <small class="pull-right">23h ago</small>
-                                        <strong>Monica Smith</strong> love <strong>Kim Smith</strong>. <br>
-                                        <small class="text-muted">2 days ago at 2:30 am - 11.06.2014</small>
-                                    </div>
-                                </div>
-                            </li>
-                            <li class="divider"></li>
-                            <li>
-                                <div class="text-center link-block">
-                                    <a href="#">
-                                        <i class="fa fa-envelope"></i> <strong>Read All Messages</strong>
-                                    </a>
-                                </div>
-                            </li>
-                        </ul>
-                    </li>
-                    <li class="dropdown">
-                        <a class="dropdown-toggle count-info" data-toggle="dropdown" href="#">
-                            <i class="fa fa-bell"></i> <span class="label label-primary">8</span>
-                        </a>
-                        <ul class="dropdown-menu dropdown-alerts">
-                            <li>
-                                <a href="#">
-                                    <div>
-                                        <i class="fa fa-envelope fa-fw"></i> You have 16 messages
-                                        <span class="pull-right text-muted small">4 minutes ago</span>
-                                    </div>
-                                </a>
-                            </li>
-                            <li class="divider"></li>
-                            <li>
-                                <a href="#">
-                                    <div>
-                                        <i class="fa fa-twitter fa-fw"></i> 3 New Followers
-                                        <span class="pull-right text-muted small">12 minutes ago</span>
-                                    </div>
-                                </a>
-                            </li>
-                            <li>
-                                <div class="text-center link-block">
-                                    <a href="#">
-                                        <strong>See All Alerts</strong>
-                                        <i class="fa fa-angle-right"></i>
-                                    </a>
-                                </div>
-                            </li>
-                        </ul>
-                    </li>
+                <div class="mail-box">
 
 
-                    <li>
-                        <a href="/login">
-                            <i class="fa fa-sign-out"></i> Log out
-                        </a>
-                    </li>
-                </ul>
+                    <div class="mail-body">
 
-            </nav>
-        </div>
+                        <form class="form-horizontal" method="get">
+                            <div class="form-group"><label class="col-sm-1 control-label">Title:</label>
+                                <div class="col-sm-10"><input type="text" class="form-control" value=""
+                                                              id="ticket_title"></div>
+                            </div>
+                            <div class="form-group"><label class="col-sm-1 control-label">Category:</label>
+                                <div class="col-sm-10"><input type="text" class="form-control" value=""
+                                                              id="ticket_category"></div>
+                            </div>
+                            <div class="form-group"><label class="col-sm-1 control-label">Localization:</label>
+                                <div class="col-sm-10"><input type="text" class="form-control" value=""
+                                                              id="ticket_localization"></div>
+                            </div>
+                            <div class="form-group"><label class="col-sm-1 control-label">Description:</label>
+                                <div class="col-sm-10"><textarea class="form-control" rows="10"
+                                                                 id="ticket_description"></textarea></div>
+                            </div>
+                        </form>
 
-        <div class="wrapper wrapper-content">
-            <div class="row">
-                <div class="col-lg-12 animated fadeInRight">
-                    <div class="mail-box-header">
-                        <h2>
-                            Create
-                        </h2>
                     </div>
-                    <div class="mail-box">
 
-
-                        <div class="mail-body">
-
-                            <form class="form-horizontal" method="get">
-                                <div class="form-group"><label class="col-sm-1 control-label">Title:</label>
-                                    <div class="col-sm-10"><input type="text" class="form-control" value=""
-                                                                  id="ticket_title"></div>
-                                </div>
-                                <div class="form-group"><label class="col-sm-1 control-label">Category:</label>
-                                    <div class="col-sm-10"><input type="text" class="form-control" value=""
-                                                                  id="ticket_category"></div>
-                                </div>
-                                <div class="form-group"><label class="col-sm-1 control-label">Localization:</label>
-                                    <div class="col-sm-10"><input type="text" class="form-control" value=""
-                                                                  id="ticket_localization"></div>
-                                </div>
-                                <div class="form-group"><label class="col-sm-1 control-label">Description:</label>
-                                    <div class="col-sm-10"><textarea class="form-control" rows="10" id="ticket_description"></textarea></div>
-                                </div>
-                            </form>
-
-                        </div>
-
-                        <div class="mail-body text-right tooltip-demo">
-                            <a onclick="createTicket();" class="btn btn-sm btn-primary"
-                               data-toggle="tooltip" data-placement="top" title="Send"><i class="fa fa-reply"></i>
-                                Create</a>
-                        </div>
-                        <div class="clearfix"></div>
+                    <div class="mail-body text-right tooltip-demo">
+                        <a onclick="createTicket();" class="btn btn-sm btn-primary"
+                           data-toggle="tooltip" data-placement="top" title="Send"><i class="fa fa-reply"></i>
+                            Create</a>
                     </div>
+                    <div class="clearfix"></div>
                 </div>
             </div>
         </div>
     </div>
+    <script src="../js/footer.js"></script>
 </div>
+
+
 
 <!-- Mainly scripts -->
 
 <script src="../js/jquery-3.1.1.min.js"></script>
 <script src="../js/bootstrap.min.js"></script>
 <script src="../js/plugins/metisMenu/jquery.metisMenu.js"></script>
-<script src="../js/plugins/slimscroll/jquery.slimscroll.min.js" ></script>
+<script src="../js/plugins/slimscroll/jquery.slimscroll.min.js"></script>
 <script src="../js/getUrlParam.js"></script>
 <script src="../js/inspinia.js"></script>
 <script src="../js/plugins/pace/pace.min.js"></script>
