--- a/app/views/login.html
+++ b/app/views/login.html
@@ -5,9 +5,9 @@
     <div>
         <h3>Welcome to Inneed</h3>
         <p>Login in. To see it in action.</p>
-        <form class="m-t" role="form" action="../">
+        <form class="m-t" role="form" action="main">
             <div class="form-group">
-                <input type="email" class="form-control" placeholder="Username" required="">
+                <input type="text" class="form-control" placeholder="Username" required="">
             </div>
             <div class="form-group">
                 <input type="password" class="form-control" placeholder="Password" required="">
