--- a/app/views/signup.html
+++ b/app/views/signup.html
@@ -1,34 +1,33 @@
 <script src="../js/header.js"></script>
-
 <body class="gray-bg">
 
 <div class="middle-box text-center loginscreen animated fadeInDown">
     <div>
         <h3>Register to Inneed</h3>
         <p>Create account to see it in action.</p>
-        <form class="m-t" role="form" action="login.html">
+        <form class="m-t" role="form" action="">
             <div class="form-group">
-                <input type="text" class="form-control" placeholder="Username" required="">
+                <input id="reg-username" type="text" class="form-control" placeholder="Username" required="">
             </div>
             <div class="form-group">
-                <input type="password" class="form-control" placeholder="Password" required="">
+                <input id="reg-password" type="password" class="form-control" placeholder="Password" required="">
             </div>
             <div class="form-group">
-                <input type="text" class="form-control" placeholder="Name" required="">
+                <input id="reg-name" type="text" class="form-control" placeholder="Name" required="">
             </div>
             <div class="form-group">
-                <input type="email" class="form-control" placeholder="Email" required="">
+                <input id="reg-email" type="email" class="form-control" placeholder="Email" required="">
             </div>
             <div class="form-group">
-                <input type="text" class="form-control" placeholder="Phone number" required="">
+                <input id="reg-phone" type="text" class="form-control" placeholder="Phone number" required="">
             </div>
             <div class="form-group">
-                <input type="text" class="form-control" placeholder="City" required="">
+                <input id="reg-city" type="text" class="form-control" placeholder="City" required="">
             </div>
             <div class="form-group">
                 <div class="checkbox i-checks"><label> <input type="checkbox"><i></i> Agree the terms and policy </label></div>
             </div>
-            <button type="submit" class="btn btn-primary block full-width m-b">Register</button>
+            <button type="submit" id="reg" class="btn btn-primary block full-width m-b">Register</button>
 
             <p class="text-muted text-center"><small>Already have an account?</small></p>
             <a class="btn btn-sm btn-white btn-block" href="login">Login</a>
@@ -41,16 +40,7 @@
 <!-- Mainly scripts -->
 <script src="../js/jquery-3.1.1.min.js"></script>
 <script src="../js/bootstrap.min.js"></script>
-<!-- iCheck -->
-<script src="../js/plugins/iCheck/icheck.min.js"></script>
-<script>
-    $(document).ready(function(){
-        $('.i-checks').iCheck({
-            checkboxClass: 'icheckbox_square-green',
-            radioClass: 'iradio_square-green',
-        });
-    });
-</script>
+<script src="../js/signup.js"></script>
 </body>
 
 </html>
